--- a/_config.yml
+++ b/_config.yml
@@ -16,11 +16,11 @@ author:  # change following line to your infomation.
   last_name: Chen  # Be used at index page about me section.
   avatar: /static/assets/img/landing/avatar.jpg  # upload your avatar at directory and edit it.
   github_username: chenaj  # Leave blank if you don't have now
-  linkedin_id: 49742b64 # Leave blank if you don't have now
+  linkedin_id: angela-chen-49742b64 # Leave blank if you don't have now
   facebook_username:   # Leave blank if you don't have now
   twitter_username:   # Leave blank if you don't have now
   email: angjchen@gmail.com  # Leave blank if you don't have now
-  cv:   # An online CV can be printed as PDF, leave blank if you don't have now
+  cv: https://drive.google.com/file/d/187r-aKlxfnYFBd0KIoDlwY-R1AerXV-N/view?usp=sharing  # An online CV can be printed as PDF, leave blank if you don't have now
   # skill icons are on avatar's left and right side. Reference urls are http://fontawesome.io/ and http://fizzed.com/oss/font-mfizz
   skill_icon1:
     - name: icon-apache
@@ -28,11 +28,11 @@ author:  # change following line to your infomation.
   skill_icon2:
     - name: fa-linux
     - name: icon-apache
-  desc: Introduce myself will be here.  # Describe yourself.
+  desc: Innovation is everywhere, and it's really cool. I enjoy working on software to contribute to new technologies. I'm looking forward to learning and evolving with the fast-paced environment and collaborating with brilliant people as a software engineer.  # Describe yourself.
 
 # comment
-disqus:  # if you wanna comment feature, go to https://disqus.com/ to get your configuration; if not, comment following two lines.
-  name: chenaj
+#disqus:  # if you wanna comment feature, go to https://disqus.com/ to get your configuration; if not, comment following two lines.
+#  name:
 
 # analytics
 ## google analytics
