--- a/_data/index/skills.yml
+++ b/_data/index/skills.yml
@@ -2,5 +2,5 @@
 
 label: Ability
 id : cs
-aspects: GitHub, Motivation, HTML5, ReactJS, Machine Learing, Python, Sleeping
-percentage: 100, 35, 65, 80, 70, 90, 50
+aspects: Java, Javascript, C++, HTML5, SQL, Machine Learing, Python, Sleeping
+percentage: 80, 50, 90, 20, 90, 20, 50, 60
