--- a/_data/index/projects.yml
+++ b/_data/index/projects.yml
@@ -2,7 +2,7 @@
 # If you don't have language feature(language.yml is empty), ignore "i18n" items
 # Suggest projects' img be located at '/static/assets/img/landing', and edit following img items.
 - name: QuixBugs: A Multi-Lingual Program Repair Benchmark Set
-  url: https://2017.splashcon.org/event/splash-2017-posters-quixbugs-a-multi-lingual-program-repair-benchmark-set-based-on-the-quixey-challenge
+  i18n: quixbugs
   gh_user: jkoppel
   repo: QuixBugs
   img: /static/assets/img/landing/quixey.png
