Updated careers, links, and skills section. Added more blogs

--- a/_data/index/careers.yml
+++ b/_data/index/careers.yml
@@ -4,7 +4,7 @@
     detail: Google
     i18n: google
   desc:
-    detail: Working at Google in their Engineering Residency Program. New grads rotate between different product area to gain more experience and exposure as a SWE.
+    detail: Working at Google in their Engineering Residency Program, where new grads rotate between different product areas in software engineering.
     i18n: google_desc
   date:
     detail: March 2017 - Present
