--- a/_data/index/skills.yml
+++ b/_data/index/skills.yml
@@ -2,5 +2,5 @@
 
 label: Ability
 id : cs
-aspects: Java, Javascript, C++, HTML5, SQL, Machine Learing, Python, Sleeping
-percentage: 80, 50, 90, 20, 90, 20, 70, 60
+aspects: Java, Javascript, C++, HTML5, CSS, SQL, Machine Learing, Python
+percentage: 80, 50, 90, 50, 30, 90, 30, 70
