Updated latest career description

--- a/_data/index/careers.yml
+++ b/_data/index/careers.yml
@@ -4,7 +4,7 @@
     detail: Google
     i18n: google
   desc:
-    detail: Working at Google in their Engineering Residency Program, where new grads rotate between different product areas in software engineering.
+    detail: Working on core maps API team and collaborating with Google Cloud Platform to improve developers console, allowing users to have a seamless experience when using our API services. 
     i18n: google_desc
   date:
     detail: March 2017 - Present
