Added word to specify type of project.

--- a/_data/index/careers.yml
+++ b/_data/index/careers.yml
@@ -46,7 +46,7 @@
     detail: Wolfram Research
     i18n: wolfram
   desc:
-    detail: Worked on a project for visualizing binary files while testing the newest release of Mathematica.
+    detail: Worked on a research project for visualizing binary files while testing the newest release of Mathematica.
     i18n: wolfram_desc
   date:
     detail: June 2016 - July 2016
